--- a/angular.json
+++ b/angular.json
@@ -3,12 +3,10 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "portfolio-app": {
+    "port": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "inlineTemplate": true,
-          "inlineStyle": true,
           "style": "scss",
           "skipTests": true
         },
@@ -41,7 +39,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/portfolio-app",
+            "outputPath": "dist/port",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -89,10 +87,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "portfolio-app:build:production"
+              "browserTarget": "port:build:production"
             },
             "development": {
-              "browserTarget": "portfolio-app:build:development"
+              "browserTarget": "port:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -100,10 +98,32 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "portfolio-app:build"
+            "browserTarget": "port:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
+            "tsConfig": "tsconfig.spec.json",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
+            "styles": [
+              "src/styles.scss"
+            ],
+            "scripts": []
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "2870ae87-8e83-4ab3-8be1-b7618d56b03a"
   }
 }
